@@ -7,6 +7,10 @@ ASSERTION FUNCTIONS
 - assertObjectEquals(object1, object2) introduced
 - assertHTMLEquals function introduced
 - assertEvaluatesToTrue and assertEvaluatesToFalse introduced
+- assertHashEquals     }
+- assertRoughlyEquals  } Pivotal functions
+- assertContains       }
+
 - changed expected/actual values display strings to use angle brackets, rather than square brackets
 
 - CLIENT-SIDE
